fixed horizontal scrolling

--- a/styles/sass/_fonts.scss
+++ b/styles/sass/_fonts.scss
@@ -38,3 +38,7 @@ h1 {
     letter-spacing: 2px; }
 
 }
+
+footer a{
+    color: black;
+}
